--- a/app/views/submissions/show.html.haml
+++ b/app/views/submissions/show.html.haml
@@ -1,10 +1,10 @@
-= content_nav_for @assignment, "See Submission"
+= content_nav_for presenter.assignment, "See Submission"
 
-%h3.pagetitle= @title
+%h3.pagetitle= presenter.title
 
 - if current_user_is_staff?
-  = render "submissions/buttons"
+  = render partial: "submissions/buttons", locals: { presenter: presenter }
 
 .pageContent
-  = render 'layouts/alerts'
-  = render 'submissions/instructor_show'
+  = render partial: 'layouts/alerts'
+  = render partial: 'submissions/instructor_show', locals: { presenter: presenter }
