Change submission controller for the new action to move the processing of the submission files to the model

--- a/app/views/submissions/new.html.haml
+++ b/app/views/submissions/new.html.haml
@@ -3,7 +3,7 @@
 %h3.pagetitle= presenter.title
 
 .pageContent
-  = render 'layouts/alerts'
+  = render partial: "layouts/alerts", locals: { model: presenter.submission }
 
   - if presenter.assignment.accepts_submissions?
     = render partial: 'form', locals: { presenter: presenter }
