--- a/app/views/submissions/edit.html.haml
+++ b/app/views/submissions/edit.html.haml
@@ -3,7 +3,7 @@
 %h3.pagetitle= presenter.title
 
 .pageContent
-  = render 'layouts/alerts'
+  = render partial: "layouts/alerts", locals: { model: presenter.submission }
 
   - if presenter.assignment.has_groups?
     - if current_user_is_student?
