Disable style for buttons

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -26,6 +26,13 @@
   &.secondary
     background-color: $color-green-3
 
+  &.disabled
+    color: $color-white
+    cursor: default
+    opacity: 0.7
+    &:hover
+      background-color: $color-blue-1
+
 .submit-buttons
   margin-top: 1rem
   position: relative
