--- a/app/views/info/_in_progress_grades_table.haml
+++ b/app/views/info/_in_progress_grades_table.haml
@@ -44,10 +44,10 @@
                     %ul.button-bar
                       %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Grade"), assignment_grade_path(g.assignment, :student_id => g.student_id), :class => "button"
                       %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit Grade"), edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
-                %td.center= check_box_tag "grade_ids[]", g.id
+                %td.center= check_box_tag "grade_ids[]", g.id, false, data: { behavior: "toggle-disable-list-command", commands: "[data-behavior='selected-in-progress-grades-command']" }
       .submit-buttons
         .right
-          = submit_tag "Update Selected Grade Statuses", :class => "button"
+          = submit_tag "Update Selected Grade Statuses", :class => "button disabled", disabled: true, data: { behavior: "selected-in-progress-grades-command" }
 
 
 
