--- a/app/views/students/syllabus/_assignments.haml
+++ b/app/views/students/syllabus/_assignments.haml
@@ -45,7 +45,7 @@
                       = "#{term_for :pass}/#{term_for :fail}"
                   - else
                     - grade = grade_for_assignment
-                    // Checking to see if this assignment type is student weightable 
+                    // Checking to see if this assignment type is student weightable
                     - if assignment.assignment_type.student_weightable?
                       // Checking to see if this student has weighted this assignment anything other than 1
                       - if (current_student.weight_for_assignment_type(assignment.assignment_type) == 0 && current_course.default_assignment_weight != 1) || current_student.weight_for_assignment_type(assignment.assignment_type) > 1
@@ -80,13 +80,13 @@
                   .right
                     %ul.button-bar
                       - if grade_released_for_assignment
-                        %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Results"), assignment_path(assignment, :anchor => "fndtn-tabt4"), :class => "button"
+                        %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Results"), assignment_path(assignment, :anchor => "tab4"), :class => "button"
                       - if assignment.has_groups?
                         - if group_for_assignment.present?
                           %li= link_to raw("<i class='fa fa-users fa-fw'></i> See #{term_for :group}"), group_path(group_for_assignment), :class => "button"
                           - if assignment.accepts_submissions? && assignment.is_unlocked_for_student?(current_student)
                             - if group_for_assignment && group_for_assignment.submission_for_assignment(assignment)
-                              %li= link_to raw("<i class='fa fa-file-o fa-fw'></i> See Submission"), assignment_path(assignment, :anchor => "fndtn-tabt3"), :class => 'button'
+                              %li= link_to raw("<i class='fa fa-file-o fa-fw'></i> See Submission"), assignment_path(assignment, :anchor => "tab3"), :class => 'button'
                             - else
                               - if group_for_assignment && group_for_assignment.approved?
                                 %li= link_to raw("<i class='fa fa-upload fa-fw'></i> Submit"), new_assignment_submission_path(assignment, :group_id => group_for_assignment), :class => 'button'
@@ -95,7 +95,7 @@
                       - else
                         - if assignment.accepts_submissions? && assignment.is_unlocked_for_student?(current_student)
                           - if student_submission.present?
-                            %li= link_to raw("<i class='fa fa-file-o fa-fw'></i> See Submission"), assignment_path(assignment, :anchor => "fndtn-tabt3"), :class => 'button'
+                            %li= link_to raw("<i class='fa fa-file-o fa-fw'></i> See Submission"), assignment_path(assignment, :anchor => "tab3"), :class => 'button'
                           - elsif assignment.open?
                             %li= link_to raw("<i class='fa fa-upload fa-fw'></i> Submit"), new_assignment_submission_path(assignment, :student_id => @student), :class => 'button'
                       - if current_user_is_staff?
