--- a/app/views/students/_students_table.haml
+++ b/app/views/students/_students_table.haml
@@ -44,4 +44,4 @@
           .right
             %ul.button-bar
               %li= link_to raw("<i class='fa fa-edit fa-fw'> </i> Edit"), edit_user_path(student), :class => "button"
-              %li= link_to raw("<i class='fa fa-trash fa-fw'> </i> Delete"), student.course_memberships.where(:course_id => current_course.id).first, :class => 'button', :data => { confirm: 'This will delete the student from your course - Are you sure?' }, :method => :delete
+              %li= link_to raw("<i class='fa fa-trash fa-fw'> </i> Delete"), student.course_memberships.where(:course_id => current_course.id).first, :class => 'button', :data => { confirm: "This will delete #{student.name} from your course - are you sure?" }, :method => :delete
