--- a/app/views/assignments/_form.haml
+++ b/app/views/assignments/_form.haml
@@ -34,7 +34,7 @@
 
     .form-item
       = f.input :accepts_submissions_until, as: :string, :include_blank => true, :input_html => { :class => 'datetimepicker' }, :label => "Accept until"
-      .form_label If you set a due date but no accept-until date, submissions and self-logged grades will be marked as late but always accepted. 
+      .form_label If you set a due date but no accept-until date, submissions and self-logged grades will be marked as late but always accepted.
 
     .form-item
       = f.label :grade_scope, "Individual or Group?"
@@ -143,7 +143,23 @@
   %section
     %h4 Unlocks
 
-    = f.input :visible_when_locked
+    .locked-visibility-options
+      = f.label :visible_when_locked, :label => "Visible when Locked"
+      = f.check_box :visible_when_locked
+
+    %ul.locked-display.visible_elements
+      %li.locked-display
+        .checkbox
+          = f.label :show_name_when_locked, :label => "Show Name when Locked"
+          = f.check_box :show_name_when_locked
+      %li.locked-display
+        .checkbox
+          = f.label :show_points_when_locked, :label => "Show Points when Locked"
+          = f.check_box :show_points_when_locked
+      %li.locked-display
+        .checkbox
+          = f.label :show_description_when_locked, :label => "Show Description when Locked"
+          = f.check_box :show_description_when_locked
 
     .unlock-conditions
       %p.hint Unlocks allow you to direct the sequence of content in your course. What do students need to do in order to unlock this assignment?
