--- a/app/views/badges/_form.haml
+++ b/app/views/badges/_form.haml
@@ -38,7 +38,23 @@
   %section
     %h4 Unlocks
     .form-item
-      = f.input :visible_when_locked
+      .locked-visibility-options
+        = f.label :visible_when_locked, :label => "Visible when Locked"
+        = f.check_box :visible_when_locked
+
+      %ul.locked-display.visible_elements
+        %li.locked-display
+          .checkbox
+            = f.label :show_name_when_locked, :label => "Show Name when Locked"
+            = f.check_box :show_name_when_locked
+        %li.locked-display
+          .checkbox
+            = f.label :show_points_when_locked, :label => "Show Points when Locked"
+            = f.check_box :show_points_when_locked
+        %li.locked-display
+          .checkbox
+            = f.label :show_description_when_locked, :label => "Show Description when Locked"
+            = f.check_box :show_description_when_locked
 
       .unlock-conditions
         %p.hint Unlock description here
