--- a/app/views/layouts/navigation/_staff_subnav.haml
+++ b/app/views/layouts/navigation/_staff_subnav.haml
@@ -1,4 +1,4 @@
 .sidebar
-  %nav.sr-only#staff-navigation Staff navigation
-  %ul.staff-sidenav{:role => "navigation", "aria-labeledby" => "staff-navigation"}
+  %nav.sr-only Staff navigation
+  %ul#staff-navigation.staff-sidenav{:role => "navigation", "aria-labeledby" => "staff-navigation"}
     = render 'layouts/navigation/staff_subnav_links'
