--- a/app/views/layouts/navigation/_staff_subnav_links.haml
+++ b/app/views/layouts/navigation/_staff_subnav_links.haml
@@ -1,7 +1,7 @@
 %li.has-form{:role => "search"}
   %label.sr-only{:for => "search-input"}
     Search #{term_for :students}
-  %input.students-search-query.search-input{ data: { autocompleteUrl: autocomplete_student_name_students_path }, type: "text", placeholder: "Search #{term_for :students}", label: false }
+  %input#student-search.students-search-query.search-input{ data: { autocompleteUrl: autocomplete_student_name_students_path }, type: "text", placeholder: "Search #{term_for :students}", label: false }
   %a.alert.button{ :href => "#" } Go
 
 - if current_user_is_admin?
