move exports_url into exports mailer views, pull archive_data hash out of specs, fix most failing specs

--- a/app/views/exports_mailer/submissions_export_success.html.haml
+++ b/app/views/exports_mailer/submissions_export_success.html.haml
@@ -7,9 +7,9 @@
 %h3{:align => "center"} Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.name }" was successfully created for course #{ @course.name }.
 %p
 %p{:align => "center"}
-  You can download your completed #{@archive_data[:format].upcase} archive
+  You can download your completed ZIP archive
   = succeed "." do
-    %a{:href => "#{ @archive_data[:url] }"} here
+    %a{:href => "#{ exports_url }"} here
 %hr/
 
 %p Sincerely,
