--- a/app/views/exports_mailer/team_submissions_export_started.html.haml
+++ b/app/views/exports_mailer/team_submissions_export_started.html.haml
@@ -11,7 +11,7 @@
 
 %p
 %p{:align => "center"}
-  You'll be notified when your #{@archive_data[:format].upcase} is ready to download.
+  You'll be notified when your ZIP archive is ready to download.
 %hr/
 
 %p Sincerely,
