--- a/app/views/exports_mailer/submissions_export_started.html.haml
+++ b/app/views/exports_mailer/submissions_export_started.html.haml
@@ -7,7 +7,7 @@
 %h3{:align => "center"} Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.name }" in course #{ @course.name } is being created.
 %p
 %p{:align => "center"}
-  You'll be notified when your #{@archive_data[:format].upcase} is ready to download.
+  You'll be notified when your ZIP archive is ready to download.
 %hr/
 
 %p Sincerely,
