--- a/app/views/exports_mailer/submissions_export_started.text.haml
+++ b/app/views/exports_mailer/submissions_export_started.text.haml
@@ -2,7 +2,7 @@ Dear #{ @professor.first_name },
 
 Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.name }" in course #{ @course.name } is being created.
 
-You'll be notified when your #{@archive_data[:format].upcase} is ready to download.
+You'll be notified when your ZIP archive is ready to download.
 
 Sincerely,
 The GradeCraft Team
