--- a/app/views/layouts/navigation/_staff_subnav_links.haml
+++ b/app/views/layouts/navigation/_staff_subnav_links.haml
@@ -29,7 +29,7 @@
   %li= link_to_unless_current raw("<i class='fa fa-cubes fa-fw'></i> #{term_for :weight} Choices"), multiplier_choices_path
 
 - if current_course.has_badges?
-  %li= link_to_unless_current raw("<i class='fa fa-shield fa-fw'></i> Awarded #{current_course.badge_term.pluralize}"), earned_badges_path
+  %li= link_to_unless_current raw("<i class='fa fa-shield fa-fw'></i> Awarded #{current_course.badge_term} Chart"), earned_badges_path
 
 %hr
 
@@ -62,7 +62,7 @@
 
   - if current_course.has_badges?
     %li
-      %a{:href => export_earned_badges_path(format: 'csv')} <i class="fa fa-certificate fa-fw"></i> Awarded  #{current_course.badge_term.pluralize}
+      %a{:href => export_earned_badges_path(format: 'csv')} <i class="fa fa-certificate fa-fw"></i> Awarded #{current_course.badge_term.pluralize}
 
   %li= link_to_unless_current raw('<i class="fa  fa-fw"></i> Assignment Structure'), export_structure_assignments_path(format: 'csv')
 
