--- a/app/views/assignments/_description_and_downloads.haml
+++ b/app/views/assignments/_description_and_downloads.haml
@@ -1,8 +1,9 @@
 .tab-container
-  - if presenter.assignment.pass_fail?
-    .italic= "#{term_for :pass}/#{term_for :fail} Assignment"
-  - else
-    .italic= "#{points presenter.assignment.point_total} points possible"
+  - if !current_student || presenter.assignment.points_visible_for_student?(current_student)
+    - if presenter.assignment.pass_fail?
+      .italic= "#{term_for :pass}/#{term_for :fail} Assignment"
+    - else
+      .italic= "#{points presenter.assignment.point_total} points possible"
 
   .italic= "Opens: #{presenter.assignment.open_at}" if presenter.assignment.open_at?
   .italic= "Due: #{presenter.assignment.due_at}" if presenter.assignment.due_at?
@@ -36,7 +37,7 @@
       - presenter.assignment.unlock_keys.each do |key|
         %li= link_to key.key_description_sentence, key.unlockable
 
-  - if presenter.assignment.description.present?
+  - if presenter.assignment.description.present? && ( !current_student || presenter.assignment.description_visible_for_student?(current_student))
     %hr.dotted
     %h4.uppercase Guidelines:
     %p= raw presenter.assignment.description
