--- a/app/views/assignments/_view_assignment_grades.html.haml
+++ b/app/views/assignments/_view_assignment_grades.html.haml
@@ -9,7 +9,7 @@
     %ul.ui-tabs-nav{:role => "tablist"}
       %li
         %a{ "href" => "#tab1"} Description & Downloads
-      - if presenter.rubric_designed? && !presenter.grades_available_for?(current_student)
+      - if presenter.rubric_designed? && !presenter.grades_available_for?(current_student) && ( !current_student || presenter.assignment.description_visible_for_student?(current_student) )
         %li
           %a{ "href" => "#tab2"} Grading Rubric
       - if presenter.has_submission_for?(current_student)
@@ -26,7 +26,7 @@
     #tabt1.ui-tabs-panel.ui-widget-content{:role => "tabpanel"}
       #tab1.active
         = render partial: 'assignments/description_and_downloads', locals: { presenter: presenter }
-      - if presenter.rubric_designed? && !presenter.grades_available_for?(current_student)
+      - if presenter.rubric_designed? && !presenter.grades_available_for?(current_student) && ( !current_student || presenter.assignment.description_visible_for_student?(current_student) )
         #tab2
           = render partial: 'assignments/rubric_preview', locals: { presenter: presenter }
       - if presenter.has_submission_for?(current_student)
