--- a/app/views/students/sidebar/_sidebar_to_do_list.haml
+++ b/app/views/students/sidebar/_sidebar_to_do_list.haml
@@ -19,6 +19,10 @@
             %span.bold.strikethrough.assignment-name= link_to "#{assignment.try(:name)}", assignment
             .small.uppercase= "#{assignment.assignment_type.name}"
           - else
-            %span.bold.assignment-name= link_to assignment.name, assignment_grade_path(assignment, :student_id => current_student)
+            - if assignment.name_visible_for_student?(current_student)
+              %span.bold.assignment-name= link_to assignment.name, assignment_grade_path(assignment, :student_id => current_student)
+            - else
+              %span.bold.assignment-name= "Locked #{(term_for :assignment ).titleize}"
+              %span.italic= "You must unlock this #{term_for :assignment } to learn more about it"
             .small.uppercase= "#{assignment.assignment_type.name}"
             .form_label= "Due: #{assignment.try(:due_at).strftime("%A, %B %d, %Y, at %l:%M%p")}"
