--- a/app/views/students/badges.html.haml
+++ b/app/views/students/badges.html.haml
@@ -7,7 +7,7 @@
     //student badges table
     -# logic for badges that have actually been earned
     - if @earned_badges.present?
-      %h4= "Earned #{term_for :badges}" 
+      %h4= "Earned #{term_for :badges}"
       - @earned_badges.each do |earned_badge|
         -# logic for badges that have actually been earned
         - if @earned_badges_by_badge_id[earned_badge.badge_id]
@@ -26,14 +26,14 @@
                   %i.fa.fa-star.fa-fw
                     .earned-count= @earned_badges_by_badge_id[earned_badge.badge_id].count
                   .badges-earned.blue
-              
+
               .badge-details
                 - if earned_badge.badge.point_total?
-                  .points= "#{points earned_badge.badge.point_total} points earned" 
+                  .points= "#{points earned_badge.badge.point_total} points earned"
                 .date="Awarded: #{earned_badge.created_at.strftime("%A, %b %d, %Y")}"
                 .feedback= raw earned_badge.try(:feedback)
-            
-            
+
+
     - if @unearned_badges.present?
       .clear
       %h4= "Possible #{term_for :badges}"
@@ -46,11 +46,13 @@
               .ribbon
                 .ribbon-stitches-top
                 .ribbon-content
-                  .badge-name= badge.name
+                  - if badge.name_visible_for_student?(current_student)
+                    .badge-name= badge.name
                 .ribbon-stitches-bottom
               .ribbon-ends
 
             .badge-details
-              - if badge.point_total?
-                .points= "#{points badge.point_total} points possible" 
+              - if badge.point_total? && badge.points_visible_for_student?(current_student)
+                .points= "#{points badge.point_total} points possible"
+              - if badge.description_visible_for_student?(current_student)
                 .feedback= raw badge.try(:description)
