--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -15,9 +15,9 @@
         = f.association :students, :collection => @other_students, as: :select, :label => "#{term_for :students}"
         .form_label= "You (#{current_student.name }) will be automatically included in this group."
     - elsif current_user_is_student?
-      .form-item= f.association :students, :collection => current_course.students, as: :select, :label => false
+      .form-item= f.association :students, :collection => current_course.students, as: :select, :label => "#{term_for :students}"
     - if current_user_is_staff?
-      .form-item= f.association :students, :collection => current_course.students, as: :select, :label => false
+      .form-item= f.association :students, :collection => current_course.students, as: :select, :label => "#{term_for :students}"
     .form_label{:id => "txtStudentName"} Enter a fellow student's name to add them to this #{term_for :group}. Only one student needs to create the #{term_for :group}, after which all #{term_for :group} members will be able to submit work, see submitted materials, and see instructor grades and feedback.
 
   %section
