Making course search available to instructors, allowing instructors to copy courses

--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -4,7 +4,7 @@
   float: left
   padding: .75rem 1rem
   background-color: $color-blue-0
-  opacity: .8
+  opacity: .9
 
   li.has-form
     margin-bottom: .75rem
@@ -54,13 +54,21 @@
     a
       display: block !important
       color: $color-white
-      padding: 0.15rem 
+      padding: 0.15rem
       font-weight: normal
       text-decoration: none
 
     a:hover, a:focus
       background-color: $color-blue-1 !important
       color: $color-white
+
+    span.alert
+      display: inline
+      background-color: $color-orange-1
+      border-radius: 1rem
+      padding: .15rem .5rem
+      color: $color-white
+      font-weight: normal
 
   /* Spacing the list divider */
   hr
