--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -36,11 +36,7 @@ select:hover
 .dropdown-menu
   position: absolute
   top: 2.6rem
-  left: 1.3rem
-  z-index: 1000
   display: none
-  float: left
-  padding: 5px
   background-color: $color-blue-5
   margin: 2px 0 0
   font-size: 14px
@@ -51,6 +47,8 @@ select:hover
   border-bottom-left-radius: $global-radius
   border-bottom-right-radius: $global-radius
   background-clip: padding-box
+  overflow-y: visible !important
+  z-index: 10000
 
   li
     margin: 0 !important
@@ -59,8 +57,8 @@ select:hover
   li a
     color: $color-grey-1 !important
 
-  li:hover, li.active a, li.active
-    background-color: $color-blue-0
+  li:hover, li a:hover, li.active a, li.active, li.active a:hover, li.active:hover
+    background-color: $color-blue-0 !important
     color: $color-white !important
 
   &.course-result
