--- a/app/views/groups/_groups_table.haml
+++ b/app/views/groups/_groups_table.haml
@@ -3,9 +3,9 @@
     %tr
       %th{:width => "20%"} #{term_for :group} Name
       %th{:style => "min-width: 200px"}= "#{current_course.user_term}s"
-      %th{:width => "20%"} Status
+      %th{:width => "10%"} Status
       %th{:style => "min-width: 200px"} #{term_for :assignments}
-      %th{:style => "min-width: 200px"}
+      %th{:style => "min-width: 250px"}
   %tbody
     - groups.each do |group|
       %tr
@@ -20,6 +20,6 @@
         %td
           .right
             %ul.button-bar
-              %li= link_to "Review #{term_for :group}", review_groups_path(:id => group), :class => 'button'
-              %li= link_to "Edit #{term_for :group}", edit_group_path(:id => group), :class => 'button'
-              %li= link_to 'Delete', group_path(group), :class => 'button', :data => { confirm: 'Are you sure?' }, :method => :delete
+              %li= link_to raw("<i class='fa fa-eye fa-fw'></i> Review #{term_for :group}"), review_groups_path(:id => group), :class => 'button'
+              %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit #{term_for :group}"), edit_group_path(:id => group), :class => 'button'
+              %li= link_to raw("<i class='fa fa-trash fa-fw'></i> Delete"), group_path(group), :class => 'button', :data => { confirm: 'Are you sure?' }, :method => :delete
