--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -19,20 +19,21 @@
 
 .pageContent
   = render 'layouts/alerts'
-  
+
   - if @group.approved?
     .alert-box.success
       %i.fa.fa-check.fa-fw
-      = "Status: #{@group.approved}"
+      %span.bold Status: Approved
   - elsif @group.rejected?
-    %i.fa.fa-times-circle.fa-fw
-    .alert-box.alert= "Status: #{@group.approved}"
+    .alert-box.alert
+      %i.fa.fa-times-circle.fa-fw
+      %span.bold Status: Rejected
   - else
     .alert-box.notice
       %i.fa.fa-flag.fa-fw
       %span.bold Status: Pending
       This #{term_for :group} must be approved by your instructor before you can proceed
-      
+
   %h4
     Members:
   %ul
@@ -40,8 +41,8 @@
       - if current_user_is_staff?
         %li= link_to gm.student.name, student_path(gm.student)
       - else
-        %li= gm.student.name  
-      
+        %li= gm.student.name
+
 
   %h4 #{term_for :assignments}:
   %ul
