Remove distinct review workflow, add notification message if groups are pending

--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -62,9 +62,9 @@
       background-color: $color-blue-1 !important
       color: $color-white
 
-    span.alert
-      display: inline
+    .notification
       background-color: $color-orange-1
+      width: 1rem
       border-radius: 1rem
       padding: .15rem .5rem
       color: $color-white
