--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -13,7 +13,7 @@
           %i.fa.fa-plus
           New #{(term_for :group).titleize}
       %li
-        %a{:href => review_groups_path(:id => @group) }
+        %a{:href => edit_group_path(:id => @group) }
           %i.fa.fa-edit
           Review #{term_for :group}
 
