--- a/app/views/groups/_groups_table.haml
+++ b/app/views/groups/_groups_table.haml
@@ -20,6 +20,8 @@
         %td
           .right
             %ul.button-bar
-              %li= link_to raw("<i class='fa fa-eye fa-fw'></i> Review #{term_for :group}"), review_groups_path(:id => group), :class => 'button'
-              %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit #{term_for :group}"), edit_group_path(:id => group), :class => 'button'
+              - if group.pending?
+                %li= link_to raw("<i class='fa fa-eye fa-fw'></i> Review #{term_for :group}"), edit_group_path(:id => group), :class => 'button'
+              - else
+                %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit #{term_for :group}"), edit_group_path(:id => group), :class => 'button'
               %li= link_to raw("<i class='fa fa-trash fa-fw'></i> Delete"), group_path(group), :class => 'button', :data => { confirm: 'Are you sure?' }, :method => :delete
