--- a/app/views/layouts/navigation/_staff_subnav_links.haml
+++ b/app/views/layouts/navigation/_staff_subnav_links.haml
@@ -73,9 +73,11 @@
 - if current_course.has_teams?
   %li= link_to_unless_current raw("<i class='fa fa-users fa-fw'></i> #{term_for :teams}"), teams_path
 %li
-  = link_to_unless_current raw("<i class='fa fa-user-plus fa-fw'></i> #{term_for :groups}"), groups_path
-  - if current_course.groups_to_review_count > 0
-    %span.alert= current_course.groups_to_review_count
+  %a{:href => groups_path }
+    %i.fa.fa-user-plus.fa-fw
+    #{term_for :groups}
+    - if current_course.groups_to_review_count > 0
+      %span.notification= current_course.groups_to_review_count
 %li= link_to_unless_current raw('<i class="fa fa-user-secret fa-fw"></i> Staff'), staff_index_path
 
 %hr
