--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -3,6 +3,13 @@
   = render partial: 'layouts/alerts', locals: { model: @group }
 
   %section
+    - if @group.pending?
+      = f.label :approved, "Status"
+      = f.select :approved, [["Pending"], ["Approved"], ["Rejected"]]
+      .form_label If rejected, this #{term_for :group} will be unable to submit any further work for these assignments
+
+      %hr.dotted
+
     .form-item
       = f.input :name, :label => "#{term_for :group} Name"
 
@@ -20,31 +27,7 @@
       .form-item= f.association :students, :collection => current_course.students, as: :select, :label => "#{term_for :students}"
     .form_label{:id => "txtStudentName"} Enter a fellow student's name to add them to this #{term_for :group}. Only one student needs to create the #{term_for :group}, after which all #{term_for :group} members will be able to submit work, see submitted materials, and see instructor grades and feedback.
 
-  %section
-    .proposals
-      - if @group.persisted?
-        %script(id="proposal-template" type="text/x-template")
-          %fieldset.proposal.callout.panel
-            = f.simple_fields_for :proposals, Proposal.new, class: 'form-inline', child_index: 'child_index' do |pf|
-              = render 'proposal_fields', f: pf
-        - i = 1
-        - @group.proposals.order_by_creation_date.each do |proposal|
-          %fieldset.proposal.panel
-            %span.columns
-              %h6= "Created: #{proposal.created_at}"
-              %p= proposal.proposal
-              - i += 1
-              = f.hidden_field :id
-      - else
-        = f.simple_fields_for :proposals, Proposal.new, class: 'form-inline', child_index: 'child_index' do |f|
-          %h4= "#{term_for :assignment} Proposal"
-          .textarea
-            .form_label= "What is your #{term_for :group} planning to do for this #{term_for :assignment}?"
-            = f.text_area :proposal, :class => "froala"
-            = f.hidden_field :id
-
-      - if @group.persisted?
-        = link_to 'Add a Proposal', '#', class: 'add-proposal button'
+  = render "proposal_section", f: f
 
   .submit-buttons
     %ul
